setup form validation for registration page

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -11,3 +11,12 @@
         font-size: 3.5rem;
     }
 }
+
+.toggle-password {
+    cursor: pointer;
+    transition: all;
+}
+
+.toggle-password:hover {
+   transform: scale(1,1);
+}
