--- a/src/templates/expenses/index.html
+++ b/src/templates/expenses/index.html
@@ -1,7 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <h1>Hello world</h1>
+    <div class="mt-2">
+    <h1>Hello head</h1>
+        <ul class="list-group">
+            <li class="list-group-item">Hello world</li>
+            <li class="list-group-item">Hello world</li>
+            <li class="list-group-item">Hello world</li>
+            <li class="list-group-item">Hello world</li>
+            <li class="list-group-item">Hello world</li>
+        </ul>
+
     </div>
-{% endblock %}
+
+{% endblock content %}
