--- a/src/templates/authentication/base.html
+++ b/src/templates/authentication/base.html
@@ -16,15 +16,11 @@
 </head>
 <body>
 
-{% include 'partials/_header.html' %}
-
 <div class="container-fluid">
     <div class="row">
 
-        {% include 'partials/_sidebar.html' %}
-
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            {% block content %} {% endblock %}
+        <main role="main">
+                {% block content %} {% endblock %}
         </main>
 
     </div>
