--- a/src/templates/authentication/register.html
+++ b/src/templates/authentication/register.html
@@ -16,23 +16,23 @@
                     <form action="{% url 'register' %}" method="post">
                         {% csrf_token %}
                         <div class="input-group mb-3">
-                            <input type="text" id="f-username" class="form-control" placeholder="Username">
+                            <input type="text" name="username" id="f-username" class="form-control" placeholder="Username" value="{{ context.username }}">
                             <span class="username-error invalid-feedback" style="display: none"></span>
                         </div>
 
                         <div class="input-group mb-3">
-                            <input type="email" id="f-email" class="form-control" placeholder="Email">
+                            <input type="email" name="email" id="f-email" class="form-control" placeholder="Email" value="{{ context.email }}">
                             <span class="email-error invalid-feedback" style="display: none"></span>
                         </div>
 
                         <div class="input-group mb-3">
-                            <input type="password" id="f-password" class="form-control" placeholder="Password">
+                            <input type="password" name="password" id="f-password" class="form-control" placeholder="Password">
                         </div>
 
                         <small class="float-end pb-1 toggle-password">SHOW</small>
 
                         <div class="input-group d-grid gap-2 mb-3">
-                            <button type="submit" class="btn btn-outline-primary">Register</button>
+                            <button type="submit" class="btn btn-outline-primary disable-btn">Register</button>
                         </div>
 
                     </form>
