--- a/src/templates/authentication/login.html
+++ b/src/templates/authentication/login.html
@@ -1,9 +1,37 @@
-{% extends 'base.html' %}
-
+{% extends 'authentication/base.html' %}
+{% load static %}
 {% block content %}
-    <div class="card">
-        <div class="card-body">
-            <h1>Login</h1>
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="card mt-5">
+
+                <div class="card-body">
+                    <div class="card-title py-2">
+                        <h2> Login Form</h2>
+                    </div>
+
+                    {% include 'partials/_alert.html' %}
+
+                    <form action="{% url 'login' %}" method="post">
+                        {% csrf_token %}
+
+                        <div class="input-group mb-3">
+                            <input type="text" name="username" class="form-control" placeholder="Username">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <input type="password" name="password" class="form-control" placeholder="Password">
+                        </div>
+
+                        <div class="input-group d-grid gap-2 mb-3">
+                            <button type="submit" class="btn btn-outline-primary disable-btn">Login</button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
         </div>
+        <div class="col-md-4"></div>
     </div>
 {% endblock %}
