--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -8,7 +8,10 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Sign out</a>
+            <form method="POST" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <input class="border-0" type="submit" value="Sign out">
+            </form>
         </li>
     </ul>
 </header>
