--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,10 @@
 
     <title>ExpAnalyse · {% block title %} {% endblock %}</title>
 
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+ <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+{#    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">#}
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
 
@@ -23,7 +26,7 @@
 
         {% include 'partials/_sidebar.html' %}
 
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 pt-2">
             {% block content %} {% endblock %}
         </main>
 
@@ -31,7 +34,12 @@
 </div>
 
 
-<script src="{% static 'js/bootstrap.js' %}"></script>
+{#<script src="{% static 'js/bootstrap.js' %}"></script>#}
+
+<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
 
