--- a/src/templates/expenses/index.html
+++ b/src/templates/expenses/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
     <div class="row">
@@ -14,39 +15,54 @@
             <a href="{% url 'add_expenses' %}" class="float-end btn btn-primary">Add Expenses</a>
         </div>
 
-        <div class="container">
+    </div>
 
-            {% include 'partials/_alert.html' %}
+    <div class="row">
+        <div class="col-md-8"></div>
+        <div class="col-md-4 px-4">
+            <div class="form-group">
+                <input type="search" id="search-input" class="form-control float-end" placeholder="Search..." aria-label="Search" />
+            </div>
+        </div>
+    </div>
 
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% if expenses.count > 0 %}
-                    {% for expense in page_obj %}
-                        <tr>
-                            <th scope="row">{{ forloop.counter }}</th>
-                            <td>₦{{ expense.amount }}</td>
-                            <td>{{ expense.category }}</td>
-                            <td>{{ expense.description }}</td>
-                            <td>{{ expense.date }}</td>
-                            <td>
-                                <a href="{% url 'update_expenses' expense.id %}" class="btn btn-primary btn-sm">Update</a>
-                                <a href="{% url 'delete_expenses' expense.id %}" class="btn btn-danger btn-sm">Delete</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                {% endif %}
-                </tbody>
-            </table>
+    <div class="container">
+
+        {% include 'partials/_alert.html' %}
+
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Category</th>
+                <th scope="col">Description</th>
+                <th scope="col">Date</th>
+                <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody class="load-table-data">
+            {% if expenses.count > 0 %}
+                {% for expense in page_obj %}
+                    <tr>
+                        <th scope="row">{{ forloop.counter }}</th>
+                        <td>₦{{ expense.amount }}</td>
+                        <td>{{ expense.category }}</td>
+                        <td>{{ expense.description }}</td>
+                        <td>{{ expense.date }}</td>
+                        <td>
+                            <a href="{% url 'update_expenses' expense.id %}" class="btn btn-primary btn-sm">Update</a>
+                            <a href="{% url 'delete_expenses' expense.id %}" class="btn btn-danger btn-sm">Delete</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+            </tbody>
+            <tbody class="load-table-search">
+            </tbody>
+        </table>
+
+        <div class="pagination-data">
             <nav aria-label="Page navigation example">
                 <div class="justify-content-start">
                     Showing page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
@@ -67,4 +83,7 @@
             </nav>
         </div>
     </div>
+
+    <script src="{% static 'js/search.js' %}"></script>
+
 {% endblock content %}
